# bitstring

./: .gitignore  LICENSE  README.md  Setup.lhs  bitstring.cabal
Data/: BitString.hs
Data/BitString/: BigEndian.hs
examples/: example.hs
include/: BitString.inc
