Cabal-Version:       2.2
Name:                bitstring
Version:             0.0.1
Synopsis:            Lazy bit strings
Description:         Lazy bit strings, built on the top of bytestrings.
License:             BSD-3-Clause
License-file:        LICENSE
Author:              Balazs Komuves
Maintainer:          bkomuves (plus) hackage (at) gmail (dot) com
Homepage:            https://github.com/bkomuves/bitstring
Stability:           Experimental
Category:            Data
Tested-With:         GHC == 9.12.1
Build-Type:          Simple

extra-source-files:  ./include/BitString.inc

Flag base4
  Description: Base v4 

Flag withQuickCheck
  Description: Build with QuickCheck test. Note that Show instances will be different.
  Default: False


Library

  if flag(base4)
    Build-Depends:        base >= 4 && < 5
    cpp-options:          -DBASE_MAJOR_VERSION=4
  else
    Build-Depends:        base >= 3 && < 4
    cpp-options:          -DBASE_MAJOR_VERSION=3

  if flag(withQuickCheck)
    Build-Depends:        QuickCheck == 2.*
    cpp-options:          -DWITH_QUICKCHECK

  Build-Depends:       bytestring
  
  Exposed-Modules:     Data.BitString,
                       Data.BitString.BigEndian
  
  Hs-Source-Dirs:      .
  include-dirs:        ./include

  default-language:    Haskell2010
  other-extensions:    CPP
  ghc-options:         -Wno-name-shadowing -Wno-duplicate-exports
  
  
